# code_pulse

./: .env.example  .gitignore  README.md  pyproject.toml
.data/ingest/: sonarr_rule_data.json
.data/memory/: local-chat.jsonl  sonar-chat.jsonl
.data/vectorstores/sonar/: index.faiss  index.pkl
.github/workflows/: sonarcloud.yml
scripts/: sonar_self_check.py  verify_rag_rule.py
src/code_pulse/: __init__.py  app.py  config.py  logger.py  memory.py  telemetry.py
src/code_pulse/agents/: __init__.py  runner.py  tools.py
src/code_pulse/mcp/: base.py  clients.py  git.py  jira.py  sonar.py  sonar_mcp_client.py  sonar_mcp_server.py
src/code_pulse/rag/: seed_sonar_rules.py  service.py
src/code_pulse/webhook/: webhook_server.py
tests/: test_rag_structured_logging.py  test_smoke.py  test_sonar_fix_per_issue.py  test_sonar_rules_endpoint.py  test_sonar_rules_errors.py  testsample.py
