[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-pulse"
version = "0.1.0"
description = "AI-enabled MCP-integrated service with agents, RAG, and memory management."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-ollama>=0.1.0",
    "faiss-cpu>=1.7.4",
    "python-multipart>=0.0.9",
    "pandas>=2.2.0",
    "pypdf>=4.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
code_pulse = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "B", "UP"]
